assets/css/style.css
body {
  background-image: url('/assets/images/moon-sunset.jpg');
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.navbar-brand:hover {
  color: #7e7a7f;
}

.nav-link {
  color: #8c86a3;
}

.nav-link:hover {
  color: rgb(219, 219, 219);
}

.display-1 {
  color: white;
  font-size: 70px;
}
.avatar {
  position: relative;
  top: -20px;
}

.avatar img {
  margin-top: 20px;
  max-width: 50%;
  border-radius: 50%;
  border-bottom: 0.2em #e3e1e7 solid;
  z-index: 5;
}

.portfolio img {
  height: 100px;
}

.portfolio {
  position: absolute;
  top: 100px;
}

.list-inline {
  color: white;
}

.style:hover {
    color: #e3e1e7;

}
footer {
  background-color: rgb(55, 65, 64);
  border-top: 0.1em solid #080909;
}

.copyright {
  color: #ffffff;
}

